fix: Fix notification getting cut off the side of the screen when the menu is open in pit scouting

--- a/scouting/static/main/styles.css
+++ b/scouting/static/main/styles.css
@@ -802,6 +802,10 @@ select {
   top: 0.75rem;
 }
 
+.right-1 {
+  right: 0.25rem;
+}
+
 .z-10 {
   z-index: 10;
 }
